--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="time">%1$s</string>
+    <string name="icon_description">App Icon</string>
+    <string name="appchooser_dialogtitle">Choose App</string>
 </resources>
